feat[FRT-26]: reset password style

--- a/templates/Page/Security/resetPasswordRequest.html.twig
+++ b/templates/Page/Security/resetPasswordRequest.html.twig
@@ -2,13 +2,25 @@
 
 {% block title %}JMLHub • Réinitialisation de mot de passe{% endblock title %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/form.css') }}">
+{% endblock %}
+
 {% block body %}
+    <div class="form-container">
+        <div class="info">
+            <div class="icon"><i class="uil uil-history"></i></div>
+            <h2>Réinitialise ton mot de passe</h2>
+            <p>Réinitialise ton mot de passe par mail pour retrouver ton accès à JML Hub !</p>
+        </div>
 
-    <h1>Demande de réinitialisation du mot de passe</h1>
+        <div class="form-control">
 
-    {{ form_start(requestPassForm) }}
-    {{ form_row(requestPassForm.email) }}
-    {{ form_row(requestPassForm._submit) }}
-    {{ form_end(requestPassForm) }}
+            {{ form_start(requestPassForm) }}
+            {{ form_row(requestPassForm.email) }}
+            {{ form_row(requestPassForm._submit) }}
+            {{ form_end(requestPassForm) }}
+        </div>
+    </div>
 
 {% endblock body %}
