--- a/templates/Page/Security/reset_password.html.twig
+++ b/templates/Page/Security/reset_password.html.twig
@@ -2,13 +2,25 @@
 
 {% block title %}JMLHub • Réinitialisation de mot de passe{% endblock %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/form.css') }}">
+{% endblock %}
+
 {% block body %}
-    <section>
-        <h1>Réinitialisation de mot de passe</h1>
-        {{ form_start(passForm) }}
-        {{ form_row(passForm.password) }}
-        {{ form_row(passForm.confirm_password) }}
-        {{ form_row(passForm._submit) }}
-        {{ form_end(passForm) }}
-    </section>
+    <div class="form-container">
+        <div class="info">
+            <div class="icon"><i class="uil uil-history"></i></div>
+            <h2>Réinitialise ton mot de passe</h2>
+            <p>Réinitialise ton mot de passe par mail pour retrouver ton accès à JML Hub !</p>
+        </div>
+
+        <div class="form-control">
+            {{ form_start(passForm) }}
+            {{ form_row(passForm.password) }}
+            {{ form_row(passForm.confirm_password) }}
+            {{ form_row(passForm._submit) }}
+            {{ form_end(passForm) }}
+        </div>
+    </div>
+
 {% endblock %}
