Feat[DEV-32]: Les playlists sont privées et les playlists par défaut ne sont plus modifiable.

--- a/templates/Page/Playlist/playlist.html.twig
+++ b/templates/Page/Playlist/playlist.html.twig
@@ -28,7 +28,9 @@
                                 {% endfor %}
                             </ul>
                         </td>
-                        {% include 'Widget/Playlist/actions.html.twig' with {'playlist': playlist} %}
+                        {% if not playlist.native %}
+                            {% include 'Widget/Playlist/actions.html.twig' with {'playlist': playlist} %}
+                        {% endif %}
                     </tr>
                 {% else %}
                     <tr>
