--- a/public/css/base.css
+++ b/public/css/base.css
@@ -3,6 +3,7 @@
 
 :root {
     --bg-color: #212121;
+    --overlay-color: rgba(33, 33, 33, 0.5);
     --panel-color: #2C2C2C;
     --input-color: #3A3A3A;
     --primary-color: #5CFEBD;
