--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,14 @@
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    background-color: var(--overlay-color);
+    display: none;
+}
+
 .content {
     margin: 0 5vh 0 5vh;
     width: 100%;
@@ -176,7 +187,7 @@
     color: var(--text-color);
 }
 
-.movie a {
+.movie a, .playlistsButton {
     padding: 4px 6px;
     background: var(--text-color);
     border-radius: 50px;
@@ -184,6 +195,10 @@
     display: flex;
     align-items: center;
     transition: .3s ease-in-out;
+}
+
+.playlistsButton {
+    cursor: pointer;
 }
 
 .movie a i{
@@ -195,7 +210,7 @@
     color: var(--text-color);
 }
 
-.movie a:nth-child(2) {
+.movie a:nth-child(2), .playlistsButton {
     background: var(--bg-color);
     color: var(--text-color);
 }
@@ -205,9 +220,80 @@
     color: var(--text-color);
 }
 
-.movie a:nth-child(2):hover {
+.movie a:nth-child(2):hover, .playlistsButton:hover {
     background: var(--text-color);
     color: var(--bg-color);
+}
+
+.playlistsTableTitle {
+    text-align: center;
+}
+
+.playlists {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    z-index: 101;
+    background-color: var(--panel-color);
+    padding: 16px;
+    border-radius: 8px;
+}
+
+.custom-checkbox input[type="checkbox"] {
+    display: none;
+}
+
+.custom-checkbox .checkmark {
+    width: 20px;
+    height: 20px;
+    background-color: white;
+    border: 2px solid #333;
+    border-radius: 50%; /* Forme ronde */
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+}
+
+.custom-checkbox input[type="checkbox"]:checked + .checkmark {
+    background-color: var(--primary-color);
+}
+
+.custom-checkbox input[type="checkbox"]:checked + .checkmark::after {
+    content: "";
+    position: absolute;
+    left: 4px;
+    top: 0px;
+    width: 6px;
+    height: 10px;
+    border: solid var(--bg-color);
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+
+.playlistsButtons {
+    display: flex;
+    justify-content: center;
+}
+
+button {
+    display: inline-block;
+    margin: 16px;
+    padding: 10px 20px;
+    width: calc(0.7 * 440px);
+    border: none;
+    border-radius: 8px;
+    font-family: var(--font-family), sans-serif;
+    font-weight: 600;
+    color: var(--bg-color);
+    background-color: var(--primary-color);
+    cursor: pointer;
+    transition: .3s ease-in-out;
+}
+
+button:hover {
+    background-color: #94ffd6;
 }
 
 
