--- a/templates/Page/home.html.twig
+++ b/templates/Page/home.html.twig
@@ -8,8 +8,13 @@
     <link rel="stylesheet" href="{{ asset('css/home.css') }}">
 {% endblock %}
 
+{% block javascripts %}
+    <script src="{{ asset('js/home.js') }}"></script>
+{% endblock %}
+
 {% block body %}
     {% include 'Widget/header.html.twig' %}
+    <div id="overlay"></div>
     <div class="content">
         <div class="top">
             <div class="input-search">
@@ -37,6 +42,7 @@
         </div>
 
         <div class="categories">
+            {% set categoriyIndex = 1 %} {# Commence par 1 car 0 est le lastmovie #}
             {% for category in categories %}
                 <div class="category">
                     <h3>{{ category.name }}</h3>
@@ -50,12 +56,46 @@
                                         <a href="{{ asset("movies/" ~ movie.filePath) }}" download>
                                             <i class="uil uil-download-alt"></i>
                                         </a>
+                                        <span class="playlistsButton" id="playlistsButton-{{ categoriyIndex }}">
+                                            <span class="material-symbols-outlined">playlist_add</span>
+                                        </span>
+                                        <div class="playlists" id="playlists-{{ categoriyIndex }}">
+                                            <input type="hidden" id="movieId-{{ categoriyIndex }}" value="{{ movie.id }}">
+                                            <input type="hidden" id="url-{{ categoriyIndex }}" value="{{ path('app_movie_add-to-playlists', {'movieId': 0, 'playlistsIds': '0'}) }}">
+                                            <div class="playlistsTableTitle">Ajouter <strong>{{ movie.title }}</strong> à une ou plusieurs playlists</div>
+                                            <table>
+                                                <tbody>
+                                                    {% for playlist in playlists %}
+                                                        <tr>
+                                                            <td>
+                                                                <label for="{{ playlist.id }}">{{ playlist.name }}</label>
+                                                            </td>
+                                                            <td>
+                                                                <label class="custom-checkbox">
+                                                                    {% set checked = "" %}
+                                                                    {% if movie in playlist.movies %}
+                                                                        {% set checked = "checked" %}
+                                                                    {% endif %}
+                                                                    <input type="checkbox" name="{{ playlist.id }}" id="{{ playlist.id }}" {{ checked }}>
+                                                                    <span class="checkmark"></span>
+                                                                </label>
+                                                            </td>
+                                                        </tr>
+                                                    {% endfor %}
+                                                </tbody>
+                                            </table>
+                                            <div class="playlistsButtons">
+                                                <button class="confirm">Confirmer</button>
+                                                <button class="cancel">Annuler</button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         {% endfor %}
                     </div>
                 </div>
+                {% set categoriyIndex = categoriyIndex + 1 %}
             {% endfor %}
         </div>
     </div>
