--- a/templates/Page/User/update.html.twig
+++ b/templates/Page/User/update.html.twig
@@ -16,14 +16,61 @@
         <div class="form-control">
             {{ form_start(form) }}
             {{ form_rest(form) }}
+            <label for="{{ form.isAdmin.vars.id }}" style="display: block;">Administrateur</label>
             <button>Mettre à jour</button>
             {{ form_end(form) }}
         </div>
     </div>
 
     <style>
+        .form-container {
+            margin: 100px auto;
+        }
+
+        .form-control input:not([type="file"]):not([type="checkbox"]) {
+            padding-left: 34px;
+        }
+
+        .form-control input[type='checkbox'] {
+            appearance: none;
+            width: 16px;
+            height: 16px;
+            background: var(--input-color);
+            cursor: pointer;
+            border: 2px solid var(--bg-color);
+            border-radius: 3px;
+            margin-top:5px;
+            outline: none;
+            box-shadow: none;
+            position: relative;
+            transition: .3s ease-in-out;
+        }
+
+        .form-control input[type='checkbox']:checked {
+            background: var(--primary-color);
+        }
+
+        .form-control .remember_me label {
+            margin-left: 8px;
+            color: var(--primary-color);
+            font-size: 12px;
+        }
+
         .icon {
             transform: rotate(180deg);
         }
+
+        .icon-input i {
+            position: absolute;
+            left: 8px;
+            top: calc(50% - 8px);
+            font-size: 20px;
+        }
+
+        .form-control label {
+            color: var(--primary-color);
+            font-size: 12px;
+        }
+
     </style>
 {% endblock body %}
