--- a/public/css/home.css
+++ b/public/css/home.css
@@ -166,8 +166,9 @@
     width: 300px;
     height: 300px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-end;
+    flex-direction: column;
 }
 
 .movie .movie-content {
