feat[FRT-34]: Add playlist lastmovie

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -6,7 +6,7 @@
     --overlay-color: rgba(33, 33, 33, 0.5);
     --panel-color: #2C2C2C;
     --input-color: #3A3A3A;
-    --primary-color: #5CFEBD;
+    --primary-color: rgb(92, 254, 189);
     --text-color: #fff;
     --font-family: Inter, sans-serif;
     --logo-font: Arial, sans-serif;
