--- a/templates/Layout/base.html.twig
+++ b/templates/Layout/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}JMLHub • Bienvenue{% endblock %}</title>
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/solid.css">
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
         <link rel="icon" href="images/logo.png">
