--- a/templates/Page/Movie/movies.html.twig
+++ b/templates/Page/Movie/movies.html.twig
@@ -21,7 +21,13 @@
                         <td>{{ movie.title }}</td>
                         <td>{{ movie.description }}</td>
                         <td>{{ movie.releaseDate | date }}</td>
-                        <td>{{ movie.rating }}</td>
+                        <td>
+                            {% if movie.rating is not null %}
+                                {{ movie.rating }}% ({{ movie.ratingsNumber}} votes)
+                            {% else %}
+                                Aucun vote
+                            {% endif %}
+                        </td>
                         {% include 'Widget/Movie/actions.html.twig' with {'movie': movie} %}
                     </tr>
                 {% else %}
