--- a/public/css/home.css
+++ b/public/css/home.css
@@ -23,6 +23,7 @@
     top: 5vh;
     background: var(--bg-color);
     padding-bottom: 16px;
+    z-index: 10;
 }
 
 .top::after {
@@ -182,6 +183,7 @@
 }
 
 .movie {
+    position: relative;
     background: var(--panel-color);
     padding: 32px;
     border-radius: 50px;
@@ -194,6 +196,15 @@
     flex-direction: column;
 }
 
+.movie > .link {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+
 .movie .movie-content {
     width: 100%;
     display: flex;
@@ -204,6 +215,7 @@
 .movie .movie-content .buttons {
     display: flex;
     gap: 8px;
+    z-index: 5;
 }
 
 .movie h4 {
@@ -229,6 +241,7 @@
     display: flex;
     align-items: center;
     transition: .3s ease-in-out;
+    z-index: 8;
 }
 
 .playlistsButton {
