--- a/templates/Page/Movie/movies.html.twig
+++ b/templates/Page/Movie/movies.html.twig
@@ -18,7 +18,7 @@
                 <tbody>
                 {% for movie in movies %}
                     <tr>
-                        <td>{{ movie.title }}</td>
+                        <td><a href="{{ path('app_movie_show', {id: movie.id}) }}">{{ movie.title }}</a></td>
                         <td>{{ movie.description }}</td>
                         <td>{{ movie.releaseDate | date }}</td>
                         <td>{{ movie.rating }}</td>
