--- a/public/css/base.css
+++ b/public/css/base.css
@@ -6,7 +6,7 @@
     --overlay-color: rgba(33, 33, 33, 0.5);
     --panel-color: #2C2C2C;
     --input-color: #3A3A3A;
-    --primary-color: rgb(92, 254, 189);
+    --primary-color: #ff773a;
     --text-color: #fff;
     --font-family: Inter, sans-serif;
     --logo-font: Arial, sans-serif;
@@ -53,7 +53,6 @@ header {
     margin-left: 5vh;
     overflow: hidden;
     transition: .3s ease-in-out;
-    z-index: 100;
 }
 
 header .logo {
@@ -133,6 +132,7 @@ header nav ul li a span {
     header {
         position: fixed;
         width: 100%;
+        z-index: 10;
         top: 16px;
         left: -100%;
         margin: 0;
@@ -142,7 +142,7 @@ header nav ul li a span {
 
     #label-header {
         display: block;
-        z-index: 101;
+        z-index: 12;
     }
 
     #checkbox-header:checked~header {
@@ -159,7 +159,7 @@ header nav ul li a span {
 }
 
 .button:hover {
-    background: rgba(92, 254, 189, 0.22);
+    background: rgba(255, 114, 25, 0.22);
 }
 
 .button.edit{
@@ -181,7 +181,7 @@ header nav ul li a span {
 }
 
 .manage {
-    margin: calc(5vh + 12px) 5vh;
+    margin: 5vh;
     width: 100%;
 }
 
@@ -242,7 +242,7 @@ table tbody tr:nth-child(even) {
 }
 
 table tbody tr:hover {
-    background-color: rgba(92, 254, 189, 0.08);
+    background-color: rgba(254, 135, 92, 0.08);
 }
 
 /* Styles pour les cellules */
