--- a/public/css/home.css
+++ b/public/css/home.css
@@ -107,7 +107,7 @@
 }
 
 .lastmovie .tag p {
-    background: rgba(148, 255, 214, 0.3);
+    background: rgba(255, 189, 148, 0.3);
     padding: 10px;
     border-radius: 50px;
     font-size: 12px;
@@ -340,7 +340,7 @@ button {
 }
 
 button:hover {
-    background-color: #94ffd6;
+    background-color: #ff9161;
 }
 
 
