--- a/public/css/base.css
+++ b/public/css/base.css
@@ -6,7 +6,7 @@
     --overlay-color: rgba(33, 33, 33, 0.5);
     --panel-color: #2C2C2C;
     --input-color: #3A3A3A;
-    --primary-color: #ff773a;
+    --primary-color: #F5951C;
     --text-color: #fff;
     --font-family: Inter, sans-serif;
     --logo-font: Arial, sans-serif;
@@ -53,12 +53,21 @@ header {
     margin-left: 5vh;
     overflow: hidden;
     transition: .3s ease-in-out;
+    user-select: none;
 }
 
 header .logo {
     display: flex;
     flex-direction: row;
     align-items: center;
+    width: 100px;
+    height: 30px;
+    user-select: none;
+}
+
+header .logo img {
+    width: 100%;
+    height: 100%;
 }
 
 header .logo .name {
