Feat: Ajout de la preview

--- a/templates/Page/Movie/create.html.twig
+++ b/templates/Page/Movie/create.html.twig
@@ -19,13 +19,13 @@
             {{ form_row(form.title) }}
             {{ form_row(form.description) }}
             {{ form_row(form.releaseDate) }}
-            {{ form_row(form.rating) }}
 
             <div class="selection">
                 {{ form_row(form.category) }}
             </div>
 
             {{ form_row(form.file) }}
+            {{ form_row(form.preview) }}
 
             <button type="submit">Créer</button>
             {{ form_end(form) }}
