--- a/templates/Layout/base.html.twig
+++ b/templates/Layout/base.html.twig
@@ -5,7 +5,7 @@
         <title>{% block title %}JMLHub • Bienvenue{% endblock %}</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=playlist_add" />
         <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-        <link rel="icon" href="images/logo.png">
+        <link rel="icon" href="images/icon.png">
         <link rel="stylesheet" href="{{ asset('css/base.css') }}">
         {% block stylesheets %}
         {% endblock %}
