--- a/templates/Page/home.html.twig
+++ b/templates/Page/home.html.twig
@@ -38,7 +38,7 @@
                         <div class="playlists" id="playlists-0">
                             <input type="hidden" id="movieId-0" value="{{ lastMovie.id }}">
                             <input type="hidden" id="url-0" value="{{ path('app_movie_add-to-playlists', {'movieId': 0, 'playlistsIds': '0'}) }}">
-                            <div class="playlistsTableTitle">Ajouter <strong>{{ lastMovie.title }}</strong> à une ou plusieurs playlists</div>
+                            <div class="playlistsTableTitle">Ajouter <strong>{{ lastMovie.title }}</strong> à une ou plusieurs watchlists</div>
                             <table>
                                 <tbody>
                                 {% for playlist in playlists %}
@@ -103,43 +103,43 @@
                                             <a href="{{ asset("movies/" ~ movie.filePath) }}" download>
                                                 <i class="uil uil-download-alt"></i>
                                             </a>
-                                            <div class="playlists" id="playlists-{{ categoriyIndex }}">
-                                                <input type="hidden" id="movieId-{{ categoriyIndex }}" value="{{ movie.id }}">
-                                                <input type="hidden" id="url-{{ categoriyIndex }}" value="{{ path('app_movie_add-to-playlists', {'movieId': 0, 'playlistsIds': '0'}) }}">
-                                                <div class="playlistsTableTitle">Ajouter <strong>{{ movie.title }}</strong> à une ou plusieurs playlists</div>
-                                                <table>
-                                                    <tbody>
-                                                    {% for playlist in playlists %}
-                                                        <tr>
-                                                            <td>
-                                                                <label for="{{ playlist.id }}">{{ playlist.name }}</label>
-                                                            </td>
-                                                            <td>
-                                                                <label class="custom-checkbox">
-                                                                    {% set checked = "" %}
-                                                                    {% if movie in playlist.movies %}
-                                                                        {% set checked = "checked" %}
-                                                                    {% endif %}
-                                                                    <input type="checkbox" name="{{ playlist.id }}" id="{{ playlist.id }}" {{ checked }}>
-                                                                    <span class="checkmark"></span>
-                                                                </label>
-                                                            </td>
-                                                        </tr>
-                                                    {% endfor %}
-                                                    </tbody>
-                                                </table>
-                                                <div class="playlistsButtons">
-                                                    <button class="confirm">Confirmer</button>
-                                                    <button class="cancel">Annuler</button>
-                                                </div>
+                                        </div>
+                                        <div class="playlists" id="playlists-{{ categoriyIndex }}">
+                                            <input type="hidden" id="movieId-{{ categoriyIndex }}" value="{{ movie.id }}">
+                                            <input type="hidden" id="url-{{ categoriyIndex }}" value="{{ path('app_movie_add-to-playlists', {'movieId': 0, 'playlistsIds': '0'}) }}">
+                                            <div class="playlistsTableTitle">Ajouter <strong>{{ movie.title }}</strong> à une ou plusieurs watchlists</div>
+                                            <table>
+                                                <tbody>
+                                                {% for playlist in playlists %}
+                                                    <tr>
+                                                        <td>
+                                                            <label for="{{ playlist.id }}">{{ playlist.name }}</label>
+                                                        </td>
+                                                        <td>
+                                                            <label class="custom-checkbox">
+                                                                {% set checked = "" %}
+                                                                {% if movie in playlist.movies %}
+                                                                    {% set checked = "checked" %}
+                                                                {% endif %}
+                                                                <input type="checkbox" name="{{ playlist.id }}" id="{{ playlist.id }}" {{ checked }}>
+                                                                <span class="checkmark"></span>
+                                                            </label>
+                                                        </td>
+                                                    </tr>
+                                                {% endfor %}
+                                                </tbody>
+                                            </table>
+                                            <div class="playlistsButtons">
+                                                <button class="confirm">Confirmer</button>
+                                                <button class="cancel">Annuler</button>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
+                                {% set categoriyIndex = categoriyIndex + 1 %}
                             {% endfor %}
                         </div>
                     </div>
-                    {% set categoriyIndex = categoriyIndex + 1 %}
                 {% endfor %}
             </div>
 
