--- a/public/css/home.css
+++ b/public/css/home.css
@@ -96,6 +96,8 @@
     align-items: flex-start;
     gap: 12px;
     text-align: left;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .lastmovie .tag {
@@ -194,6 +196,8 @@
     justify-content: space-between;
     align-items: flex-end;
     flex-direction: column;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .movie > .link {
