--- a/templates/Page/home.html.twig
+++ b/templates/Page/home.html.twig
@@ -25,11 +25,11 @@
         </div>
 
         <div class="main">
-            <div class="lastmovie">
+            <div class="lastmovie"
+                    {% if lastMovie and lastMovie.previewPath %}
+                style="background-image: url('{{ asset('movies/previews/' ~ lastMovie.previewPath) }}');"
+                    {% endif %}>
                 {% if lastMovie %}
-                    {% if lastMovie.previewPath %}
-                        <img src="{{ asset("/movies/previews/" ~ lastMovie.previewPath) }}">
-                    {% endif %}
                     <div class="tag">
                         <p>Dernière sortie</p>
                         <span class="playlistsButton" id="playlistsButton-0">
@@ -88,10 +88,10 @@
                         <h3>{{ category.name }}</h3>
                         <div class="movies">
                             {% for movie in category.movies %}
-                                <div class="movie">
-                                    {% if movie.previewPath %}
-                                        <img src="{{ asset("/movies/previews/" ~ movie.previewPath) }}">
-                                    {% endif %}
+                                <div class="movie"
+                                        {% if movie.previewPath %}
+                                    style="background-image: url('{{ asset('movies/previews/' ~ movie.previewPath) }}');"
+                                        {% endif %}>
                                     <a class="link" href="{{ path('app_movie_show', {id: movie.id}) }}"></a>
                                     <span class="playlistsButton" id="playlistsButton-{{ categoriyIndex }}">
                                         <span class="material-symbols-outlined">playlist_add</span>
