--- a/templates/Page/Email/password_reset.html.twig
+++ b/templates/Page/Email/password_reset.html.twig
@@ -1,4 +1,3 @@
 <p>Bonjour {{ user.username }}</p>
-<p>Pour votre demande de réinitialisation de mot de passe, veuillez cliquer sur le lien ci-dessous.</p>
-<p><a href="{{ url|raw }}">{{ url|raw }}</a></p>
+<p>Pour votre demande de réinitialisation de mot de passe, veuillez cliquer <a href="{{ url|raw }}">ici</a>.</p>
 <p>Merci</p>
