--- a/public/css/home.css
+++ b/public/css/home.css
@@ -23,7 +23,7 @@
     top: 5vh;
     background: var(--bg-color);
     padding-bottom: 16px;
-    z-index: 10;
+    z-index: 7;
 }
 
 .top::after {
@@ -245,7 +245,7 @@
     display: flex;
     align-items: center;
     transition: .3s ease-in-out;
-    z-index: 8;
+    z-index: 5;
 }
 
 .playlistsButton {
@@ -344,7 +344,7 @@ button {
 }
 
 button:hover {
-    background-color: #ff9161;
+    background-color: #f4a238;
 }
 
 
